# evohelix-sqlmodel-py

./: .releaserc.json  LICENSE  README.md  pyproject.toml  requirements.txt
.gitea/workflows/: build.yaml
src/evohelix_sqlm/: db.py  rest.py  utils.py
